--- a/report.html
+++ b/report.html
@@ -49,11 +49,13 @@
         <div class="main">
             <h1 style="text-align: center;">Report A Problem</h1>
             <br>
-            <lable for="topic">Topic:</lable><br>
-            <input type="text" id="topic" size="150"><br>
-            <lable for="complaint">Complaint:</lable><br>
-            <textarea id="complaint" rows="10" cols="120"></textarea><br><br>
-            <button>Report</button>
+            <form>
+                <lable for="topic">Topic:</lable><br>
+                <input type="text" id="topic" size="150"><br>
+                <lable for="complaint">Complaint:</lable><br>
+                <textarea id="complaint" rows="10" cols="120"></textarea><br><br>
+                <input type="submit" value="Report">
+            </form>
         </div>
         <footer>
             <div class="bottomBar">
