--- a/signedInUser.html
+++ b/signedInUser.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <style>
-            button{
+            .searchButton{
                 background: none;
                 border:none;
                 height: 40px;
@@ -20,7 +20,7 @@
                 background-color: #4885ED;
                 height: 180px;
                 width: 100%;
-                grid-template-columns: 300px auto;
+                grid-template-columns: 300px auto 250px;
             }
             .searchBar{
                 display:grid;
@@ -28,7 +28,7 @@
             }
             .searchBarRow{
                 display:grid;
-                grid-template-columns: 600px auto;
+                grid-template-columns: 830px auto;
             }
             .bottomBar{
                 background-color: #4885ED;
@@ -52,10 +52,15 @@
                         <input style="height:40px;" type="text" size="150">
                     </div>
                     <div>
-                        <button><img src="./img/search.png" height="30" width="30"></button>
+                        <button class="searchButton"><img src="./img/search.png" height="30" width="30"></button>
                     </div>
                 </div>
-                <div></div>
+            </div>
+            <div style="align-items: center;align-content: center; text-align: center;padding-top: 35px;">
+                <span style="font-weight: bolder;font-size: 20px;">Welcome Back,</span><br>
+                <span id="username">[username]</span><br><br>
+                <button>My Account</button>&nbsp;&nbsp;
+                <button>SignOut</button>
             </div>
         </div>
         <div class="main">
