--- a/adminPanel.html
+++ b/adminPanel.html
@@ -1,34 +1,9 @@
 <html>
     <head>
         <style>
-            .searchButton{
-                background: none;
-                border:none;
-                height: 40px;
-            }
-            a{
-                color:#000;
-                text-decoration: none;
-            }
             .main{
                 padding-right: 150px;
                 padding-left: 150px;
-                text-align: center;
-            }
-            .topBar{
-                display: grid;
-                background-color: #4885ED;
-                height: 180px;
-                width: 100%;
-                grid-template-columns: 300px auto 250px;
-            }
-            .searchBar{
-                display:grid;
-                grid-template-rows: 60px 60px 60px;
-            }
-            .searchBarRow{
-                display:grid;
-                grid-template-columns: 830px auto;
             }
             .bottomBar{
                 background-color: #4885ED;
@@ -38,35 +13,23 @@
             .border{
                 border-style: dashed;
             }
+            a{
+                color:#000;
+                text-decoration: none;
+            }
         </style>
     </head>
     <body>
-        <div class="topBar">
-            <div class="border"style="padding-left: 20px;padding-top:30px;">
-                <img src="./img/cart.png" height="100" width="100">
-            </div>
-            <div class="searchBar border">
-                <div></div>
-                <div class="searchBarRow" style="text-align: center;align-items: center;">
-                    <div style="text-align: center;">
-                        <input style="height:40px;" type="text" size="150">
-                    </div>
-                    <div>
-                        <button class="searchButton"><img src="./img/search.png" height="30" width="30"></button>
-                    </div>
-                </div>
-            </div>
-            <div class="border" style="align-items: center;align-content: center; text-align: center;padding-top: 35px;">
-                <span style="font-weight: bolder;font-size: 20px;">Welcome Back,</span><br>
-                <span id="username">[username]</span><br><br>
-                <button>My Account</button>&nbsp;&nbsp;
-                <button>SignOut</button>
-            </div>
-        </div>
         <div class="main">
-            <h1>Heading</h1>
             <div>
-                All the details
+                <span style="font-size: 30px;">Admin Panel</span>
+                <div style="float: right;">
+                    <button>Account delete requests</button>
+                    <button>Add another Admin</button>
+                    <button>Payment Details</button>
+                    <button>Complaints</button>
+                    <button>SignOut</button>
+                </div>
             </div>
         </div>
         <div class="bottomBar">
