--- a/addAdmin.html
+++ b/addAdmin.html
@@ -1,88 +1,82 @@
 <html>
-    <head>
-        <style>
-            .link{
-                color:#000;
-                text-decoration: none;
-            }
-            .main{
-                text-align: center;
-                display: grid;
-                grid-template-columns: 450px auto 450px;
-            }
-            .topBar{
-                display: grid;
-                background-color: #4885ED;
-                height: 180px;
-                width: 100%;
-                grid-template-columns: 300px auto;
-            }
-            .searchBar{
-                display:grid;
-                grid-template-rows: 60px 60px 60px;
-            }
-            .searchBarRow{
-                display:grid;
-                grid-template-columns: 600px auto;
-            }
-            .bottomBar{
-                background-color: #4885ED;
-                height: 140px;
-                width: 100%;
-            }
-            .border{
-                border-style: dashed;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="main">
-            <div style="float:right;padding-right: 300px;">
-                <img src="img/cart.png" height="150" width="150">
-            </div>
-            <div style="border-style: dashed;">
-                <h2>Welcome</h2>
-                <h4>Create your buyMe account</h4>
-                <label for="firstname">First Name</label><br>
-                <input type="text"><br> 
-                <label for="lastname">Last Name</label><br>
-                <input type="text"> <br>
-                <label for="email">Email</label><br>
-                <input type="text"> <br>
-                <label for="nic">NIC</label><br>
-                <input type="text"> <br>
-                <label for="tp">Telephone Number</label><br>
-                <input type="number" size="10"> <br>
-                <label for="password">Password</label><br>
-                <input type="password"> <br>
-                <label for="re-password">Re Enter Password</label><br>
-                <input type="password"> <br>
-                <input type="checkbox">By clicking, I agree to the <a href="./terms.html">Terms of Use</a> and have read the <a href="./privacy.html">Privacy Statement</a><br>
-                <button>Register as an admin</button>
-            </div>
-            <div style="float:left;padding-left: 300px;">
-                Already a member? <a style="color:red">Log In</a>
-            </div>
-        </div>
-        <br>
-        <div class="bottomBar">
-            <div style="text-align: center;justify-content: center;align-content: center;align-items: center;">
-                <br><br>
-                <a class="link" href="report.html">Report</a>&nbsp;|&nbsp;
-                <a class="link" href="faq.html">FAQ</a>&nbsp;|&nbsp;
-                <a class="link" href="contact.html">Contact Us</a>&nbsp;|&nbsp;
-                <a class="link" href="privacy.html">Privacy Policy</a>&nbsp;|&nbsp;
-                <a class="link" href="help.html">Help</a>&nbsp;|&nbsp;
-                <a class="link" href="abput.html">About</a>
-                <div>
-                    <br>
-                    <img src="./img/facebook.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
-                    <img src="./img/twitter.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
-                    <img src="./img/insta.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
-                    <!-- <img src="./img/facebook.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
+  <head>
+    <style>
+      .link {
+        color: #000;
+        text-decoration: none;
+      }
+      .main {
+        text-align: center;
+        display: grid;
+        grid-template-columns: 450px auto 450px;
+      }
+      .topBar {
+        display: grid;
+        background-color: #4885ed;
+        height: 180px;
+        width: 100%;
+        grid-template-columns: 300px auto;
+      }
+      .searchBar {
+        display: grid;
+        grid-template-rows: 60px 60px 60px;
+      }
+      .searchBarRow {
+        display: grid;
+        grid-template-columns: 600px auto;
+      }
+      .bottomBar {
+        background-color: #4885ed;
+        height: 140px;
+        width: 100%;
+      }
+      .border {
+        border-style: dashed;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="main">
+      <div style="float: right; padding-right: 300px">
+        <img src="img/cart.png" height="150" width="150" />
+      </div>
+      <div style="border-style: dashed">
+        <h2>Welcome</h2>
+        <h4>Create your buyMe account</h4>
+        <label for="firstname">First Name</label><br />
+        <input type="text" /><br />
+        <label for="lastname">Last Name</label><br />
+        <input type="text" /> <br />
+        <label for="email">Email</label><br />
+        <input type="text" /> <br />
+        <label for="nic">NIC</label><br />
+        <input type="text" /> <br />
+        <label for="tp">Telephone Number</label><br />
+        <input type="number" size="10" /> <br />
+        <label for="password">Password</label><br />
+        <input type="password" /> <br />
+        <label for="re-password">Re Enter Password</label><br />
+        <input type="password" /> <br />
+        <input type="checkbox" />By clicking, I agree to the <a href="./terms.html">Terms of Use</a> and have read the <a href="./privacy.html">Privacy Statement</a><br />
+        <button>Register as an admin</button>
+      </div>
+      <div style="float: left; padding-left: 300px">Already a member? <a style="color: red">Log In</a></div>
+    </div>
+    <br />
+    <div class="bottomBar">
+      <div style="text-align: center; justify-content: center; align-content: center; align-items: center">
+        <br /><br />
+        <a class="link" href="report.html">Report</a>&nbsp;|&nbsp; <a class="link" href="faq.html">FAQ</a>&nbsp;|&nbsp; <a class="link" href="contact.html">Contact Us</a>&nbsp;|&nbsp;
+        <a class="link" href="privacy.html">Privacy Policy</a>&nbsp;|&nbsp; <a class="link" href="help.html">Help</a>&nbsp;|&nbsp;
+        <a class="link" href="abput.html">About</a>
+        <div>
+          <br />
+          <img src="./img/facebook.png" height="50px" width="50px" />&nbsp;&nbsp;&nbsp;&nbsp; <img src="./img/twitter.png" height="50px" width="50px" />&nbsp;&nbsp;&nbsp;&nbsp;
+          <img src="./img/insta.png" height="50px" width="50px" />&nbsp;&nbsp;&nbsp;&nbsp;
+          <!-- <img src="./img/facebook.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
                     <img src="./img/facebook.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp; -->
-                </div>
-            </div>
         </div>
-    </body>
+      </div>
+    </div>
+  </body>
 </html>
