--- a/adminPanel.html
+++ b/adminPanel.html
@@ -1,55 +1,50 @@
 <html>
-    <head>
-        <style>
-            .main{
-                padding-right: 150px;
-                padding-left: 150px;
-            }
-            .bottomBar{
-                background-color: #4885ED;
-                height: 140px;
-                width: 100%;
-            }
-            .border{
-                border-style: dashed;
-            }
-            a{
-                color:#000;
-                text-decoration: none;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="main">
-            <div>
-                <span style="font-size: 30px;">Admin Panel</span>
-                <div style="float: right;">
-                    <button>Account delete requests</button>
-                    <button>Add another Admin</button>
-                    <button>Payment Details</button>
-                    <button>Complaints</button>
-                    <button>SignOut</button>
-                </div>
-            </div>
+  <head>
+    <style>
+      .main {
+        padding-right: 150px;
+        padding-left: 150px;
+      }
+      .bottomBar {
+        background-color: #4885ed;
+        height: 140px;
+        width: 100%;
+      }
+      .border {
+        border-style: dashed;
+      }
+      a {
+        color: #000;
+        text-decoration: none;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="main">
+      <div>
+        <span style="font-size: 30px">Admin Panel</span>
+        <div style="float: right">
+          <button>Account delete requests</button>
+          <button>Add another Admin</button>
+          <button>Payment Details</button>
+          <button>Complaints</button>
+          <button>SignOut</button>
         </div>
-        <div class="bottomBar">
-            <div style="text-align: center;justify-content: center;align-content: center;align-items: center;">
-                <br><br>
-                <a href="report.html">Report</a>&nbsp;|&nbsp;
-                <a href="faq.html">FAQ</a>&nbsp;|&nbsp;
-                <a href="contact.html">Contact Us</a>&nbsp;|&nbsp;
-                <a href="privacy.html">Privacy Policy</a>&nbsp;|&nbsp;
-                <a href="help.html">Help</a>&nbsp;|&nbsp;
-                <a href="abput.html">About</a>
-                <div>
-                    <br>
-                    <img src="./img/facebook.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
-                    <img src="./img/twitter.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
-                    <img src="./img/insta.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
-                    <!-- <img src="./img/facebook.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
+      </div>
+    </div>
+    <div class="bottomBar">
+      <div style="text-align: center; justify-content: center; align-content: center; align-items: center">
+        <br /><br />
+        <a href="report.html">Report</a>&nbsp;|&nbsp; <a href="faq.html">FAQ</a>&nbsp;|&nbsp; <a href="contact.html">Contact Us</a>&nbsp;|&nbsp; <a href="privacy.html">Privacy Policy</a>&nbsp;|&nbsp; <a href="help.html">Help</a>&nbsp;|&nbsp;
+        <a href="abput.html">About</a>
+        <div>
+          <br />
+          <img src="./img/facebook.png" height="50px" width="50px" />&nbsp;&nbsp;&nbsp;&nbsp; <img src="./img/twitter.png" height="50px" width="50px" />&nbsp;&nbsp;&nbsp;&nbsp;
+          <img src="./img/insta.png" height="50px" width="50px" />&nbsp;&nbsp;&nbsp;&nbsp;
+          <!-- <img src="./img/facebook.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
                     <img src="./img/facebook.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp; -->
-                </div>
-            </div>
         </div>
-    </body>
+      </div>
+    </div>
+  </body>
 </html>
