--- a/report.html
+++ b/report.html
@@ -1,80 +1,75 @@
 <html>
-    <head>
-        <style>
-            .buttons{
-                background: none;
-                border:none;
-                height: 40px;
-            }
-            a{
-                color:#000;
-                text-decoration: none;
-            }
-            .main{
-                padding-right: 150px;
-                padding-left: 150px;
-            }
-            .topBar{
-                background-color: #4885ED;
-                height: 140px;
-                width: 100%;
-                padding-top: 20px;
-                padding-bottom: 20x;
-            }
-            .bottomBar{
-                background-color: #4885ED;
-                height: 140px;
-                width: 100%;
-                margin-top: 250px;
-            }
-            .person{
-                text-shadow: 2px 2px 10px #000000;
-                width:fit-content;
-                text-align: center;
-                display: inline-block;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="topBar">
-            <div style="padding-left: 20px;display: inline-block;float: left;">
-                <img src="./img/cart.png" height="100" width="100">
-            </div>
-            <div style="width: 10%;display: inline-block;"></div>
-            <div style="text-align: center; display: inline-block;padding-top:30px;">
-                <input style="height:40px;z-index: 1;" type="text" size="150">
-                <button class="buttons"><img src="./img/search.png" height="30" width="30"></button>
-            </div>
+  <head>
+    <style>
+      .buttons {
+        background: none;
+        border: none;
+        height: 40px;
+      }
+      a {
+        color: #000;
+        text-decoration: none;
+      }
+      .main {
+        padding-right: 150px;
+        padding-left: 150px;
+      }
+      .topBar {
+        background-color: #4885ed;
+        height: 140px;
+        width: 100%;
+        padding-top: 20px;
+        padding-bottom: 20x;
+      }
+      .bottomBar {
+        background-color: #4885ed;
+        height: 140px;
+        width: 100%;
+        margin-top: 250px;
+      }
+      .person {
+        text-shadow: 2px 2px 10px #000000;
+        width: fit-content;
+        text-align: center;
+        display: inline-block;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="topBar">
+      <div style="padding-left: 20px; display: inline-block; float: left">
+        <img src="./img/cart.png" height="100" width="100" />
+      </div>
+      <div style="width: 10%; display: inline-block"></div>
+      <div style="text-align: center; display: inline-block; padding-top: 30px">
+        <input style="height: 40px; z-index: 1" type="text" size="150" />
+        <button class="buttons"><img src="./img/search.png" height="30" width="30" /></button>
+      </div>
+    </div>
+    <div class="main">
+      <h1 style="text-align: center">Report A Problem</h1>
+      <br />
+      <form>
+        <lable for="topic">Topic:</lable><br />
+        <input type="text" id="topic" size="150" /><br />
+        <lable for="complaint">Complaint:</lable><br />
+        <textarea id="complaint" rows="10" cols="120"></textarea><br /><br />
+        <input type="submit" value="Report" />
+      </form>
+    </div>
+    <footer>
+      <div class="bottomBar">
+        <div style="text-align: center; justify-content: center; align-content: center; align-items: center">
+          <br /><br />
+          <a href="report.html">Report</a>&nbsp;|&nbsp; <a href="faq.html">FAQ</a>&nbsp;|&nbsp; <a href="contact.html">Contact Us</a>&nbsp;|&nbsp; <a href="privacy.html">Privacy Policy</a>&nbsp;|&nbsp; <a href="help.html">Help</a>&nbsp;|&nbsp;
+          <a href="abput.html">About</a>
+          <div>
+            <br />
+            <img src="./img/facebook.png" height="50px" width="50px" />&nbsp;&nbsp;&nbsp;&nbsp; <img src="./img/twitter.png" height="50px" width="50px" />&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="./img/insta.png" height="50px" width="50px" />&nbsp;&nbsp;&nbsp;&nbsp;
+          </div>
         </div>
-        <div class="main">
-            <h1 style="text-align: center;">Report A Problem</h1>
-            <br>
-            <form>
-                <lable for="topic">Topic:</lable><br>
-                <input type="text" id="topic" size="150"><br>
-                <lable for="complaint">Complaint:</lable><br>
-                <textarea id="complaint" rows="10" cols="120"></textarea><br><br>
-                <input type="submit" value="Report">
-            </form>
-        </div>
-        <footer>
-            <div class="bottomBar">
-                <div style="text-align: center;justify-content: center;align-content: center;align-items: center;">
-                    <br><br>
-                    <a href="report.html">Report</a>&nbsp;|&nbsp;
-                    <a href="faq.html">FAQ</a>&nbsp;|&nbsp;
-                    <a href="contact.html">Contact Us</a>&nbsp;|&nbsp;
-                    <a href="privacy.html">Privacy Policy</a>&nbsp;|&nbsp;
-                    <a href="help.html">Help</a>&nbsp;|&nbsp;
-                    <a href="abput.html">About</a>
-                    <div>
-                        <br>
-                        <img src="./img/facebook.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
-                        <img src="./img/twitter.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
-                        <img src="./img/insta.png" height="50px" width="50px">&nbsp;&nbsp;&nbsp;&nbsp;
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </body>
+      </div>
+    </footer>
+  </body>
 </html>
