feat: added universal serif font

--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="main.css" />
     <style>
       .buttons {
         background: none;
@@ -54,7 +55,8 @@
       <div class="bottomBar">
         <div style="text-align: center; justify-content: center; align-content: center; align-items: center">
           <br /><br />
-          <a href="report.html">Report</a>&nbsp;|&nbsp; <a href="faq.html">FAQ</a>&nbsp;|&nbsp; <a href="contact.html">Contact Us</a>&nbsp;|&nbsp; <a href="privacy.html">Privacy Policy</a>&nbsp;|&nbsp; <a href="help.html">Help</a>&nbsp;|&nbsp;
+          <a href="report.html">Report</a>&nbsp;|&nbsp; <a href="faq.html">FAQ</a>&nbsp;|&nbsp; <a href="contact.html">Contact Us</a>&nbsp;|&nbsp;
+          <a href="privacy.html">Privacy Policy</a>&nbsp;|&nbsp; <a href="help.html">Help</a>&nbsp;|&nbsp;
           <a href="abput.html">About</a>
           <div>
             <br />
