--- a/banUser.html
+++ b/banUser.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="main.css" />
     <style>
       .link {
         color: #000;
@@ -62,8 +63,9 @@
     <div class="bottomBar">
       <div style="text-align: center; justify-content: center; align-content: center; align-items: center">
         <br /><br />
-        <a class="link" href="report.html">Report</a>&nbsp;|&nbsp; <a class="link" href="faq.html">FAQ</a>&nbsp;|&nbsp; <a class="link" href="contact.html">Contact Us</a>&nbsp;|&nbsp;
-        <a class="link" href="privacy.html">Privacy Policy</a>&nbsp;|&nbsp; <a class="link" href="help.html">Help</a>&nbsp;|&nbsp;
+        <a class="link" href="report.html">Report</a>&nbsp;|&nbsp; <a class="link" href="faq.html">FAQ</a>&nbsp;|&nbsp;
+        <a class="link" href="contact.html">Contact Us</a>&nbsp;|&nbsp; <a class="link" href="privacy.html">Privacy Policy</a>&nbsp;|&nbsp;
+        <a class="link" href="help.html">Help</a>&nbsp;|&nbsp;
         <a class="link" href="abput.html">About</a>
         <div>
           <br />
